# notifications_bot

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yaml  docker-compose.yml  prometheus.yml  pyproject.toml  setup.cfg
apps/admin/: pyproject.toml
apps/admin/envs/: .main.env.example
apps/admin/src/: app.py  container.py  main.py
apps/admin/src/controllers/auth/: auth.py
apps/admin/src/controllers/notifications/: notifications.py
apps/admin/src/controllers/users/: users.py
apps/admin/src/middlewares/: auth.py
apps/admin/src/settings/main/: main_settings.py
apps/bot/: pyproject.toml
apps/bot/bot/: app.py  container.py  main.py
apps/bot/bot/broker/: __init__.py  notifications.py  users.py
apps/bot/bot/core/bot/: bot.py
apps/bot/bot/core/bot_runners/: __init__.py  base_bot_runner.py
apps/bot/bot/core/bot_runners/polling/: __init__.py  polling_bot_runner.py
apps/bot/bot/core/bot_runners/webhooks/: webhooks_bot_runner.py
apps/bot/bot/handlers/commands/: router.py
apps/bot/bot/handlers/commands/logout/: __init__.py  logout.py
apps/bot/bot/handlers/commands/start/: __init__.py  start.py
apps/bot/bot/handlers/controllers/webhooks/: __init__.py  webhooks.py
apps/bot/bot/settings/bot/: __init__.py  bot.py
apps/bot/bot/settings/webhooks/: __init__.py  webhooks.py
apps/bot/envs/: .bot.env.example  .main.env.example  .services.env.example  .webhooks.env.example
apps/bot/src/: __main__.py  app.py  container.py  main.py
apps/bot/src/broker/: notifications.py  users.py
apps/bot/src/core/bot/: __init__.py  base_bot.py  bot.py  bot_settings.py
apps/bot/src/core/bot/polling/: polling_bot.py
apps/bot/src/core/bot/webhooks/: webhooks_bot.py
apps/bot/src/core/bot_runners/: __init__.py  base_bot_runner.py
apps/bot/src/core/bot_runners/polling/: polling_bot_runner.py
apps/bot/src/core/bot_runners/webhooks/: __init__.py  webhooks_bot_runner.py
apps/bot/src/core/bots/: __init__.py  bot_settings.py
apps/bot/src/core/bots/polling/: __init__.py  polling_bot.py
apps/bot/src/core/bots/webhooks/: __init__.py  webhooks_bot.py
apps/bot/src/handlers/commands/: __init__.py  router.py
apps/bot/src/handlers/commands/start/: start.py
apps/bot/src/handlers/controllers/: controller.py
apps/bot/src/handlers/controllers/webhooks/: webhooks.py
apps/bot/src/rpc/: __init__.py  users.py
apps/bot/src/settings/: __init__.py
apps/bot/src/settings/bot/: __init__.py  bot_settings.py
apps/bot/src/settings/envs/main/: __init__.py  main_settings.py
apps/bot/src/settings/envs/webhooks/: __init__.py  webhooks_settings.py
apps/bot/src/settings/services/: __init__.py  services_settings.py
apps/bot/src/settings/webhooks/: __init__.py  webhooks_settings.py
apps/notifications/: pyproject.toml
apps/notifications/envs/: .main.env.example
apps/notifications/notifications/: app.py  container.py  main.py
apps/notifications/notifications/modules/notifications/: __init__.py  broker.py  controller.py  publisher.py
apps/notifications/notifications/settings/notifications/: __init__.py  notifications.py
apps/notifications/src/: app.py  container.py  main.py
apps/notifications/src/modules/notifications/: broker.py  controller.py
apps/notifications/src/settings/main/: main_settings.py
apps/users/: alembic.ini  docker-compose.yaml  pyproject.toml
apps/users/db/: env.py
apps/users/db/versions/: 8a790f764648_add_an_user_mode.py  aa3ade5c69b7_add_an_user_model.py  af6e1676dabe_add_user_model.py
apps/users/envs/: .main.env.example
apps/users/src/: __main__.py  app.py  container.py  main.py
apps/users/src/core/db/: __init__.py  connector.py
apps/users/src/core/queue/: __init__.py  connector.py
apps/users/src/db/: connector.py
apps/users/src/models/: base.py  user.py
apps/users/src/modules/users/: __init__.py  controller.py  queue.py  repository.py  rpc.py  schema.py
apps/users/src/modules/users/dtos/: __init__.py  get_all.py  update.py
apps/users/src/settings/main/: __init__.py  main_settings.py
apps/users/users/: app.py  container.py  main.py
apps/users/users/models/: base.py  user.py
apps/users/users/modules/users/: __init__.py  controller.py  repository.py  rpc.py
apps/users/users/settings/users/: __init__.py  users.py
docker/: Dockerfile.bot  Dockerfile.frontend  Dockerfile.notifications  Dockerfile.proxy  Dockerfile.users
scripts/: run_flake.sh  run_mypy.sh
(+67 files in other folders)
