[tool.poetry]
name = "notifications-bot"
version = "0.1.0"
description = ""
authors = ["Denis Romodanov <darvenommm@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
prometheus-client = "^0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.11.2"
autoflake = "^2.3.1"
flake8 = "^7.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.8.19"
flake8-coding = "^1.3.2"
flake8-comprehensions = "^3.15.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.5.0"
flake8-executable = "^2.1.3"
flake8-isort = "^6.1.1"
flake8-logging = "^1.6.0"
flake8-pie = "^0.16.0"
flake8-quotes = "^3.4.0"
flake8-simplify = "^0.21.0"
isort = "^5.13.2"
sqlalchemy = "^2.0.35"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
^/(
  (
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
  )/
)
'''

[tool.isort]
line_length = 100
order_by_type = true
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = false
mypy_path = "apps"
explicit_package_bases = true
exclude = ["^conf/", "^tests/", "^utils/"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "prometheus_client.*",
    "starlette_prometheus.*",
    "uvicorn.*",
]
ignore_missing_imports = true
