[tool.poetry]
name = "admin"
version = "0.1.0"
description = ""
authors = ["Denis Romodanov <darvenommm@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
fastapi = {extras = ["standard"], version = "^0.115.3"}
uvloop = "^0.21.0"
orjson = "^3.10.10"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
aiohttp = "^3.10.10"
dependency-injector = "^4.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
