[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Denis Romodanov <darvenommm@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
aiohttp = "^3.10.10"
uvloop = "^0.20.0"
orjson = "^3.10.7"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
msgpack = "^1.1.0"
aio-pika = "^9.4.3"
dependency-injector = "^4.42.0"
aiogram = "^3.13.1"
ecs-logging = "^2.2.0"
starlette-context = "^0.3.6"
colored-custom-logger = "^1.6.0"
python-logstash = "^0.4.8"
prometheus-client = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
