[tool.poetry]
name = "notifications"
version = "0.1.0"
description = ""
authors = ["Denis Romodanov <darvenommm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}
uvloop = "^0.21.0"
orjson = "^3.10.10"
dependency-injector = "^4.42.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
msgpack = "^1.1.0"
aiohttp = "^3.10.10"
aio-pika = "^9.4.3"
aiodns = "^3.2.0"
brotli = "^1.1.0"
uvicorn = "^0.32.0"
colored-custom-logger = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
