[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Denis Romodanov <darvenommm@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
aiohttp = "^3.10.10"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
msgpack = "^1.1.0"
aio-pika = "^9.4.3"
uvloop = "^0.21.0"
orjson = "^3.10.7"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
